[package]
name = "speed-formatter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# For code formatting (we'll shell out to existing tools)
# prettier, biome, rustfmt via system calls

# For performance benchmarking
instant = "0.1"
